# engineering-knowledge-copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py  errors.py  router.py
app/api/v1/: contact.py  documents.py  health.py  jobs.py  knowledge_bases.py  query.py  retrieval.py
app/core/: config.py  exceptions.py  logging.py
app/db/: session.py
app/db/migrations/: README.md
app/models/: __init__.py  chunk.py  document.py  enums.py  ingestion_job.py  knowledge_base.py  mixins.py  query_log.py
app/schemas/: common.py  contact.py  document.py  job.py  knowledge_base.py  query.py  retrieval.py
app/services/: cache.py  chunker.py  citations.py  contact.py  document_catalog.py  embedder.py  ingestion.py  ingestion_queue.py  llm.py  metrics.py  openai_client.py  pagination.py  parser.py  query_history.py  rag.py  rate_limit.py  retrieval.py  retry.py  storage.py  validation.py
app/workers/: celery_app.py  ingestion_tasks.py
docker/: worker.Dockerfile
docs/: architecture.md  demo-kit.md  demo-video-script.md  provider-demo-mode.md  public-deployment.md  sample-questions.md
tests/unit/: test_chunker.py  test_citations.py  test_document_lifecycle.py  test_health.py  test_ingestion_queue.py  test_model_providers.py  test_pagination.py  test_query_history.py  test_rag.py  test_rate_limit.py  test_retrieval_pipeline.py  test_retry.py  test_validation.py
